Fix incompatibility with java 17